# crible

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  rust-toolchain.toml  rustfmt.toml  test-data-sample.csv
.github/workflows/: check.yml  ci.yml  docker.yml  release.yml
ci/: clean.sh  coverage.sh  install-build-deps.sh
ci/docker/: aarch64-unknown-linux-gnu.dockerfile  x86_64-unknown-linux-musl.dockerfile
crible-lib/: Cargo.toml
crible-lib/src/: encoding.rs  expression.rs  index.rs  lib.rs
src/: backend.rs  error.rs  executor.rs  expression.rs  expressions.rs  index.rs  logic.pest  main.rs  operations.rs  search_index.rs  server.rs  utils.rs
src/backends/: binfs.rs  fs.rs  jsonfs.rs  memory.rs  mod.rs  redis.rs
src/server/: api.rs  errors.rs  mod.rs  readwrite.rs
