[package]
name = "crible"
version = "0.1.0"
authors = ["lirsacc <c.lirsac@gmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/lirsacc/crible"
repository = "https://github.com/lirsacc/crible"
license = "MIT"

[dependencies]
boolean_expression = "0.4.0"
croaring = "0.4.5"
csv = "1.1"
log = "0.4.8"
pest = "2.1.3"
pest_derive = "2.1.0"
pretty_env_logger = "0.4.0"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.55"
structopt = { version = "0.3", default-features = false }
thiserror = "1.0.20"
tokio = { version = "0.2", features = ["macros", "process", "sync", "rt-core", "rt-threaded", "fs", "blocking"] }
warp = "0.2"

[dev-dependencies]
parameterized = "0.2.0"
