[package]
name = "crible-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
croaring = "0.5.1"
nom = "7.1.1"
serde = "1.0.136"
serde_derive = "1.0.136"
thiserror = "1.0.30"

[dev-dependencies]
rstest = "0.12.0"
